# s6-group-projects

./: .gitignore  LICENSE
ceng336/THE2/: the2-0.8.12-min.pcf  the2-master.pcf
ceng336/THE3/: another_sample_scenario.webm  gamepad.pcf  lcd.h  switching_between_players.webm  the3.h
ceng336/THE3/THE3.X/: .gitignore  CMakeLists.txt  Makefile  lcd.h  pragmas.h  the3.c  the3.h
ceng336/THE4/: sample.hex
ceng336/THE4/lcdSample/: LCD.c  define.h  int.c  main.c  taskdesc.c  tsk_task0.c
ceng336/THE4/serial_echo/: int.c  taskdesc.c  tsk_task0.c  tsk_task1.c
ceng336/THE4/the4/: main.c  tsk_task1.c
ceng336/THE4/the4.X/: .gitignore  CMakeLists.txt  LCD.c  LCD.h  LCD_task.c  command_task.c  command_task.err  common.h  global.h  group20.txt  hash_task.c  int.c  main.c  pic_hash_compute.c  pic_hash_compute.h  response_task.c  response_task.err  taskdesc.c  taskdesc.err
ceng336/THE4/the4.X/nbproject/: configurations.xml  project.xml
ceng336/THE4/the4_material/: cookingSimSettings.json  game_utils.py  pic_hash_compute.c  (+1 more)
ceng350/: .gitignore  srs.tex
ceng350/SAD/: Makefile  sad.tex
ceng350/SRS/: .gitignore  Makefile  srs.tex
ceng350/diagrams/: Context Diagram.mdj  context_diagram.mdj
ceng384/hw1/: chirp_part_a.csv  chirp_part_b.csv  hw1.ipynb  hw1.py  hw1.tex  q7a.py  q7b.py  shifted_sawtooth_part_a.csv  shifted_sawtooth_part_b.csv  sine_part_a.csv  sine_part_b.csv
ceng384/hw2/: Makefile  hw2.py  hw2.tex  hw2_signal.csv
ceng384/hw3/: Makefile  hw3.py  hw3.tex  q8a.py  q8b.py  q8c.py  q8d.py
ceng384/hw4/: Makefile  hw4.py  hw4.tex  q1c.py  tester.py
(+70 files in other folders)
